proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-server-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
  selector:
    app: proxy-server
